Update My Favourite Recipe.html

--- a/My Favourite Recipe.html
+++ b/My Favourite Recipe.html
@@ -61,7 +61,7 @@
 </section>
 <section>
 	<h2>Nigerian Coconut Rice</h2>
-	<img src="Coconot.jpg">
+	<img src="coconot.jpg">
 	<h3>List of Ingridents</h3>
 	<ul>
 			<li>3 cigar cups | 750g long grain parboiled rice</li>
